# dbcli

./: AGENTS.md  Cargo.toml  Cross.toml  README.md  UserGuide.md
.github/workflows/: ci.yml  release-build.yml
dbcli/: Cargo.toml
dbcli/src/: cli.rs  config.rs  connection.rs  interactive.rs  lib.rs  logger.rs  main.rs  queries.rs  server.rs
dbcli/src/backend/: error.rs  factory.rs  mod.rs
dbcli/src/backend/gaussdb/: conn.rs  error.rs  mod.rs  pool.rs  types.rs
dbcli/src/backend/mysql/: dialect.rs  mod.rs  pool.rs  types.rs
dbcli/src/backend/oracle/: conn.rs  dialect.rs  mod.rs  pool.rs  types.rs
dbcli/src/backend/oracle_native/: conn.rs  mod.rs  pool.rs
dbcli/tests/: regress_gaussdb.rs  regress_mysql.rs  regress_oracle.rs
dbcli/tests/common/: mod.rs
polar-mysql/: Cargo.toml
polar-mysql/src/: cli.rs  config.rs  connection.rs  interactive.rs  logger.rs  main.rs  output.rs  queries.rs  server.rs
polar-mysql/src/backend/: error.rs  factory.rs  mod.rs
polar-mysql/src/backend/mysql/: conn.rs  mod.rs  pool.rs
polar-mysql/src/backend/oracle/: conn.rs  dialect.rs  mod.rs  pool.rs  types.rs
polar-mysql/src/backend/oracle_native/: mod.rs  pool.rs
tests/: README.md  docker-all.toml  docker-compose.yml  docker-gaussdb.toml  docker-mysql.toml  docker-oracle.toml
