[package]
name = "polar-mysql"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI and MCP server for MySQL/PolarDB-X/Oracle/GaussDB database introspection"

[lib]
name = "polar_mysql"
path = "src/lib.rs"

[[bin]]
name = "hepta_dbcli"
path = "src/main.rs"

[[test]]
name = "regress_mysql"
path = "tests/regress_mysql.rs"
required-features = ["integration"]

[[test]]
name = "regress_oracle"
path = "tests/regress_oracle.rs"
required-features = ["integration", "oracle"]

[[test]]
name = "regress_gaussdb"
path = "tests/regress_gaussdb.rs"
required-features = ["integration", "gaussdb"]

[features]
default = ["oracle-rs", "oracle"]
integration = []
oracle-rs = ["dep:oracle-rs"]
oracle = ["dep:oracle"]
gaussdb = ["dep:gaussdb"]

[dependencies]
mysql_async = { version = "0.37", default-features = false, features = ["default-rustls"] }
oracle-rs = { version = "0.1", optional = true }
oracle = { version = "0.6", optional = true }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
rmcp = { version = "1.5.0", features = ["server", "macros", "transport-io"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1.0"
toml = "0.8"
dirs = "6"
keyring = { version = "3", features = ["apple-native", "sync-secret-service", "crypto-rust"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tracing-appender = "0.2"
rustyline = "18"
rustyline-derive = "0.12"
rpassword = "7"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
csv = "1"
async-trait = "0.1"
rust_decimal = { version = "1", default-features = false, features = ["std"] }
uuid = { version = "1", default-features = false, features = ["std"] }
gaussdb = { git = "https://github.com/c2j/rust-opengauss", optional = true, features = [
    "with-chrono-0_4", "with-rust_decimal-1", "with-serde_json-1", "with-uuid-1",
] }
